--- a/style.css
+++ b/style.css
@@ -19,15 +19,6 @@ body{
     flex-direction: column;
 }
 
-.header_nimi_desc{
-    display: none;
-    flex-direction: column;
-    margin-left: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
 .header_pealkiri{
     display: flex;
     text-align: center;
@@ -53,6 +44,59 @@ body{
     color: white;
     font-weight: bold;
     font-size: 20px;
+}
+
+.header_alus_desc{
+    display: none;
+}
+
+@media screen and (min-width: 1024px){
+    .header_alus{
+        display: none;
+    }
+
+    .header_alus_desc{
+        display: flex;
+        width: 100%;
+        height: 100px;
+        background-color: rgba(0, 255, 240, 0.5);
+        justify-content: space-around;
+    }
+
+    .header_nimi_desc{
+        display: flex;
+        flex-direction: column;
+        margin-top: auto;
+        margin-bottom: auto;
+        font-weight: bold;
+        color: white;
+    }
+
+    .header_pealkiri_desc{
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        color: white;
+        font-weight: bold;
+        font-size: 40px;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    .header_nupud_desc{
+        display: flex;
+        flex-direction: row;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    
+    .header_nupud_desc a{
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        font-size: 26px;
+        margin-left: 15%;
+    }
 }
 
 /* Sisu Avaleht */
@@ -135,6 +179,17 @@ body{
     text-decoration: none;
     padding: 7px;
     border-radius: 5px;
+}
+
+@media screen and (min-width: 1024px){
+
+    .projekt{
+        width: 40%;
+        border-radius: 10px;
+        font-size: 24px;
+        margin-top: 2%;
+    }
+
 }
 
 /* Sisu projekt */
