--- a/style.css
+++ b/style.css
@@ -184,10 +184,28 @@ body{
 @media screen and (min-width: 1024px){
 
     .projekt{
-        width: 40%;
+        width: fit-content;
         border-radius: 10px;
         font-size: 24px;
-        margin-top: 2%;
+        margin-top: 6%;
+    }
+
+    .sisu_projekt{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .kooli{
+        display: flex;
+        flex-direction: column;
+        margin-top: 5%;
+    }
+
+    .era{
+        display: flex;
+        flex-direction: column;
+        margin-top: 5%;
     }
 
 }
